// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput basic 1`] = `
<div
  class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
>
  <input
    autocomplete="off"
    class="StyledTextInput-bqUxsy bXaJkI"
    name="item"
    value=""
  />
</div>
`;

exports[`TextInput close suggestion drop 1`] = `
<div
  class="StyledGrommet-gKbdxL iuxDFS"
>
  <div
    class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
  >
    <input
      autocomplete="off"
      class="StyledTextInput-bqUxsy bXaJkI"
      data-testid="test-input"
      id="item"
      name="item"
      value=""
    />
  </div>
</div>
`;

exports[`TextInput close suggestion drop 2`] = `
<div
  class="StyledDrop-czaYBK lavWGj"
  id="text-input-drop__item"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="TextInput__ContainerBox-fLyVAb kiFeIx StyledBox-YaZNy jLqfV"
  >
    <ol
      class="StyledTextInput__StyledSuggestions-goNSYK buRCAN"
    >
      <li>
        <button
          class="StyledButton-qbvYY hLxYwU"
          type="button"
        >
          <div
            class="StyledBox-YaZNy hZNqBU"
          >
            test
          </div>
        </button>
      </li>
      <li>
        <button
          class="StyledButton-qbvYY hLxYwU"
          type="button"
        >
          <div
            class="StyledBox-YaZNy hZNqBU"
          >
            test1
          </div>
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`TextInput close suggestion drop 3`] = `
"@media only screen and (max-width:699px) {
  .jLqfV {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jLqfV {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .hZNqBU {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hZNqBU {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .hLxYwU {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.lavWGj {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #f8f8f8;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .lavWGj {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .kiFeIx {
    width: 100%;
  }
}"
`;

exports[`TextInput close suggestion drop 4`] = `
<div
  class="StyledGrommet-gKbdxL iuxDFS"
>
  <div
    class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
  >
    <input
      autocomplete="off"
      class="StyledTextInput-bqUxsy bXaJkI"
      data-testid="test-input"
      id="item"
      name="item"
      value=""
    />
  </div>
</div>
`;

exports[`TextInput complex suggestions 1`] = `
<div
  class="StyledGrommet-gKbdxL iuxDFS"
>
  <div
    class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
  >
    <input
      autocomplete="off"
      class="StyledTextInput-bqUxsy bXaJkI"
      data-testid="test-input"
      id="item"
      name="item"
      value=""
    />
  </div>
</div>
`;

exports[`TextInput complex suggestions 2`] = `
<div
  class="StyledDrop-czaYBK lavWGj"
  id="text-input-drop__item"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="TextInput__ContainerBox-fLyVAb kiFeIx StyledBox-YaZNy jLqfV"
  >
    <ol
      class="StyledTextInput__StyledSuggestions-goNSYK buRCAN"
    >
      <li>
        <button
          class="StyledButton-qbvYY hLxYwU"
          type="button"
        >
          <div
            class="StyledBox-YaZNy hZNqBU"
          >
            test
          </div>
        </button>
      </li>
      <li>
        <button
          class="StyledButton-qbvYY hLxYwU"
          type="button"
        >
          <div
            class="StyledBox-YaZNy hZNqBU"
          >
            test1
          </div>
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`TextInput complex suggestions 3`] = `
"@media only screen and (max-width:699px) {
  .jLqfV {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jLqfV {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .hZNqBU {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hZNqBU {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .hLxYwU {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.lavWGj {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #f8f8f8;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .lavWGj {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .kiFeIx {
    width: 100%;
  }
}"
`;

exports[`TextInput handles next and previous without suggestion 1`] = `
<div
  class="StyledGrommet-gKbdxL iuxDFS"
>
  <div
    class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
  >
    <input
      autocomplete="off"
      class="StyledTextInput-bqUxsy bXaJkI"
      data-testid="test-input"
      id="item"
      name="item"
      value=""
    />
  </div>
</div>
`;

exports[`TextInput handles next and previous without suggestion 2`] = `
<div
  class="StyledGrommet-gKbdxL iuxDFS"
>
  <div
    class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
  >
    <input
      autocomplete="off"
      class="StyledTextInput-bqUxsy bXaJkI"
      data-testid="test-input"
      id="item"
      name="item"
      value=""
    />
  </div>
</div>
`;

exports[`TextInput next and previous suggestions 1`] = `
<div
  class="StyledGrommet-gKbdxL iuxDFS"
>
  <div
    class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
  >
    <input
      autocomplete="off"
      class="StyledTextInput-bqUxsy bXaJkI"
      data-testid="test-input"
      id="item"
      name="item"
      value=""
    />
  </div>
</div>
`;

exports[`TextInput select a suggestion 1`] = `
<div
  class="StyledGrommet-gKbdxL iuxDFS"
>
  <div
    class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
  >
    <input
      autocomplete="off"
      class="StyledTextInput-bqUxsy bXaJkI"
      data-testid="test-input"
      id="item"
      name="item"
      value=""
    />
  </div>
</div>
`;

exports[`TextInput select suggestion 1`] = `
<div
  class="StyledGrommet-gKbdxL iuxDFS"
>
  <div
    class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
  >
    <input
      autocomplete="off"
      class="StyledTextInput-bqUxsy kynUdO"
      data-testid="test-input"
      id="item"
      name="item"
      value=""
    />
  </div>
</div>
`;

exports[`TextInput select suggestion 2`] = `
<div
  class="StyledDrop-czaYBK lavWGj"
  id="text-input-drop__item"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="TextInput__ContainerBox-fLyVAb kiFeIx StyledBox-YaZNy jLqfV"
  >
    <ol
      class="StyledTextInput__StyledSuggestions-goNSYK buRCAN"
    >
      <li>
        <button
          class="StyledButton-qbvYY hLxYwU"
          type="button"
        >
          <div
            class="StyledBox-YaZNy hZNqBU"
          >
            test
          </div>
        </button>
      </li>
      <li>
        <button
          class="StyledButton-qbvYY hLxYwU"
          type="button"
        >
          <div
            class="StyledBox-YaZNy hZNqBU"
          >
            test1
          </div>
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`TextInput select suggestion 3`] = `
"@media only screen and (max-width:699px) {
  .jLqfV {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jLqfV {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .hZNqBU {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hZNqBU {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .hLxYwU {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.lavWGj {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #f8f8f8;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .lavWGj {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .kiFeIx {
    width: 100%;
  }
}"
`;

exports[`TextInput select suggestion 4`] = `
<div
  class="StyledGrommet-gKbdxL iuxDFS"
>
  <div
    class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
  >
    <input
      autocomplete="off"
      class="StyledTextInput-bqUxsy kynUdO"
      data-testid="test-input"
      id="item"
      name="item"
      value=""
    />
  </div>
</div>
`;

exports[`TextInput suggestions 1`] = `
<div
  class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
>
  <input
    autocomplete="off"
    class="StyledTextInput-bqUxsy bXaJkI"
    data-testid="test-input"
    id="item"
    name="item"
    value=""
  />
</div>
`;

exports[`TextInput suggestions 2`] = `
<div
  class="StyledDrop-czaYBK lavWGj"
  id="text-input-drop__item"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="TextInput__ContainerBox-fLyVAb kiFeIx StyledBox-YaZNy jLqfV"
  >
    <ol
      class="StyledTextInput__StyledSuggestions-goNSYK buRCAN"
    >
      <li>
        <button
          class="StyledButton-qbvYY hLxYwU"
          type="button"
        >
          <div
            class="StyledBox-YaZNy hZNqBU"
          >
            test
          </div>
        </button>
      </li>
      <li>
        <button
          class="StyledButton-qbvYY hLxYwU"
          type="button"
        >
          <div
            class="StyledBox-YaZNy hZNqBU"
          >
            test1
          </div>
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`TextInput suggestions 3`] = `
"@media only screen and (max-width:699px) {
  .jLqfV {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .jLqfV {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .hZNqBU {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hZNqBU {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .hLxYwU {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.lavWGj {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  outline: none;
  background-color: #f8f8f8;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .lavWGj {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .kiFeIx {
    width: 100%;
  }
}"
`;
